--- a/docs/app/views/examples/components/hero/_props.html.erb
+++ b/docs/app/views/examples/components/hero/_props.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= md('`alt_text`') %></td>
-  <td><%= md('Sets the (`alt`) text for the Hero\'s artwork image.') %></td>
+  <td><%= md('Sets the (`alt`) text for the Hero\'s image.') %></td>
   <td><%= md('String') %></td>
   <td><%= md('`nil`') %></td>
 </tr>
@@ -18,7 +18,7 @@
 </tr>
 <tr>
   <td><%= md('`cta_attributes`') %></td>
-  <td><%= md('Include this property in order to activate a "play button" action on the image. This property allows for adding attributes to the Hero CTA artwork.') %></td>
+  <td><%= md('Include this property in order to activate a "play button" action on the image. This property allows for adding attributes to the Hero image.') %></td>
   <td><%= md('Hash') %></td>
   <td><%= md('') %></td>
 </tr>
@@ -53,6 +53,12 @@
   <td><%= md('`large`') %></td>
 </tr>
 <tr>
+  <td><%= md('`image_start`') %></td>
+  <td><%= md('Sets the horizontal placement of the image to start within the Hero.') %></td>
+  <td><%= md('Boolean') %></td>
+  <td><%= md('`false`') %></td>
+</tr>
+<tr>
   <td><%= md('`title`') %></td>
   <td><%= md('Sets the title for the component.') %></td>
   <td><%= md('String') %></td>
@@ -69,5 +75,5 @@
 </tr>
 <tr>
   <td><%= md('`sage_hero_footer_actions`') %></td>
-  <td><%= md('This area can hold buttons or other CTAs in the content area. ') %></td>
+  <td><%= md('This area can hold buttons or other CTAs in the content area.') %></td>
 </tr>
