docs(panel): updates Panel docs for React

--- a/docs/app/views/examples/components/panel/_preview.html.erb
+++ b/docs/app/views/examples/components/panel/_preview.html.erb
@@ -56,7 +56,7 @@ Ut elementum id leo ac fringilla.
 
 <h3>Body</h3>
 
-There are a few for the panel body container.
+There are a few options for the panel body container.
 
 <h4>Panel Block</h4>
 
